cmake_minimum_required(VERSION 2.8)
project(opticalFlow)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(opticalFlow opticalFlow.cpp)
add_executable(LucasKanade LucasKanade.cpp)
target_Link_Libraries(opticalFlow ${OpenCV_LIBS})
target_Link_Libraries(LucasKanade ${OpenCV_LIBS})
